<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <!--    <com.zj.file.ui.ZFileVideoPlayer-->
    <!--        android:id="@+id/sun_videoPlayer"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/sun_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/sun_back"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sun_titleLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sun_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun_title"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sun_title_tip"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/sun_txt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/sun_et_tip"
        android:textColor="#B5B5C3"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
        app:layout_constraintTop_toBottomOf="@+id/sun_titleLayout" />

    <LinearLayout
        android:id="@+id/sun_phoneBg1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_sun_phone_edit"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
        app:layout_constraintTop_toBottomOf="@+id/sun_txt1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/sun_86"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/ic_sjx"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/sun_phoneEdit1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/sun_phone"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextFields" />

    </LinearLayout>


    <TextView
        android:id="@+id/sun_loginBtn2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_sun_login_btn"
        android:gravity="center"
        android:text="@string/sun_login"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
        app:layout_constraintTop_toBottomOf="@+id/sun_phoneBg1" />

    <TextView
        android:id="@+id/sun_pwdtxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sun_tip"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
        app:layout_constraintTop_toBottomOf="@+id/sun_loginBtn2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/sun_other_login"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/sun_other"
        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout" />

    <LinearLayout
        android:id="@+id/sun_other"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="start|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sun_xytxt"
        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sun_qq"
            android:src="@drawable/ic_qq" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/sun_wechart"
            android:src="@drawable/ic_we_chat" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/sun_alipay"
            android:src="@drawable/ic_alipay" />

    </LinearLayout>

    <TextView
        android:id="@+id/sun_xytxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sun_policy"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>