<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dsl_dslTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/d_s_l"
            android:textColor="@color/zfile_black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dsl_startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/dsl_fragmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment" />

        <include
            android:id="@+id/dsl_include"
            layout="@layout/layout_result_txt" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>